updated the links for the tiktok and youtube buttons

--- a/index.html
+++ b/index.html
@@ -14,7 +14,18 @@
 
     <h1 class="title">@_artkrasnova_</h1>
 
-    <button class="btn">Order Here</button><button class="btn">My Website</button><button class="btn">TikTok</button><button class="btn">Youtube</button>
+    <a href="#" target="_blank" > 
+        <button class="btn">Order Now!</button>
+    </a>
+    <a href="#" target="_blank" > 
+        <button class="btn">My Website</button>
+    </a>
+    <a href="https://www.tiktok.com/@_anastasiakrasnova_?lang=en" target="_blank" > 
+        <button class="btn">TikTok</button>
+    </a>
+    <a href="https://www.youtube.com/channel/UCzFZnYZf1r1uNwH2U7zQlsQ?guided_help_flow=5" target="_blank" > 
+        <button class="btn">Youtube</button>
+    </a>
 
     
     </div>
