--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 
     <h1 class="title">@_artkrasnova_</h1>
 
+    <div class="btnContainer">
+
     <a href="#" target="_blank" > 
         <button class="btn">Order Now!</button>
     </a>
@@ -27,6 +29,7 @@
         <button class="btn">Youtube</button>
     </a>
 
+    </div>
     
     </div>
 </body>
