activate scroll feature, style the buttons, changed order now to here

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="btnContainer">
 
     <a href="#" target="_blank" > 
-        <button class="btn">Order Now!</button>
+        <button class="btn">Order Here!</button>
     </a>
     <a href="#" target="_blank" > 
         <button class="btn">My Website</button>
