updated etsy account link

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 
     <div class="btnContainer">
 
-    <a href="https://www.etsy.com/" target="_blank" > 
+    <a href="https://www.etsy.com/people/a0n9x1jp04gwe9ag?ref=hdr_user_menu-profile" target="_blank" > 
         <button class="btn">Order Here!</button>
     </a>
-    <a href="#" target="_blank" > 
+    <a href="" target="_blank" > 
         <button class="btn">My Website</button>
     </a>
     <a href="https://www.tiktok.com/@_anastasiakrasnova_?lang=en" target="_blank" > 
