--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <a href="https://www.etsy.com/people/a0n9x1jp04gwe9ag?ref=hdr_user_menu-profile" target="_blank" > 
         <button class="btn">Order Here!</button>
     </a>
-    <a href="" target="_blank" > 
+    <a href="#"> 
         <button class="btn">My Website</button>
     </a>
     <a href="https://www.tiktok.com/@_anastasiakrasnova_?lang=en" target="_blank" > 
