updated ref for pic

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container"> 
         
-        <img class="profilePic" src="/images/Profilepic.jpeg" alt="profile">
+        <img class="profilePic" src="images/Profilepic.jpeg" alt="profile">
 
     <h1 class="title">@_artkrasnova_</h1>
 
