started js code to track clicks

--- a/index.html
+++ b/index.html
@@ -9,29 +9,29 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div class="container"> 
-        
-        <img class="profilePic" src="images/Profilepic.jpeg" alt="profile">
+ <div class="container"> 
 
-    <h1 class="title">@_artkrasnova_</h1>
+<img class="profilePic" src="images/Profilepic.jpeg" alt="profile">
+
+<h1 class="title">@_artkrasnova_</h1>
 
     <div class="btnContainer">
-
-    <a href="https://www.etsy.com/people/a0n9x1jp04gwe9ag?ref=hdr_user_menu-profile" target="_blank" > 
+        <a class="etsyLink" href="https://www.etsy.com/people/a0n9x1jp04gwe9ag?ref=hdr_user_menu-profile" target="_blank" > 
         <button class="btn">Order Here!</button>
-    </a>
-    <a href="#"> 
+        </a>
+        <a class="webLink" href="#"> 
         <button class="btn">My Website</button>
-    </a>
-    <a href="https://www.tiktok.com/@_anastasiakrasnova_?lang=en" target="_blank" > 
+        </a>
+        <a class="tiktokLink" href="https://www.tiktok.com/@_anastasiakrasnova_?lang=en" target="_blank" > 
         <button class="btn">TikTok</button>
-    </a>
-    <a href="https://www.youtube.com/channel/UCzFZnYZf1r1uNwH2U7zQlsQ?guided_help_flow=5" target="_blank" > 
+        </a>
+        <a class="ytLink" href="https://www.youtube.com/channel/UCzFZnYZf1r1uNwH2U7zQlsQ?guided_help_flow=5" target="_blank" > 
         <button class="btn">Youtube</button>
-    </a>
-
+        </a>
     </div>
     
-    </div>
+ </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
