added pinterest account link

--- a/index.html
+++ b/index.html
@@ -19,9 +19,12 @@
         <a class="etsyLink" href="https://www.etsy.com/people/a0n9x1jp04gwe9ag?ref=hdr_user_menu-profile" target="_blank" > 
         <button class="btn">Order Here!</button>
         </a>
-        <a class="webLink" href="#"> 
-        <button class="btn">My Website</button>
+        <a class="pinLink" href="https://www.pinterest.com/CerpaMedia/_created/" target="_blank" > 
+            <button class="btn">Pinterest</button>
         </a>
+        <!-- <a class="webLink" href="#"> 
+        <button class="btn">My Website</button>
+        </a> -->
         <a class="tiktokLink" href="https://www.tiktok.com/@_anastasiakrasnova_?lang=en" target="_blank" > 
         <button class="btn">TikTok</button>
         </a>
