updated the link to etsy

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <h1 class="title">@_artkrasnova_</h1>
 
     <div class="btnContainer">
-        <a class="etsyLink" href="https://www.etsy.com/people/a0n9x1jp04gwe9ag?ref=hdr_user_menu-profile" target="_blank" > 
+        <a class="etsyLink" href="https://www.etsy.com/shop/Cerpamedia" target="_blank" > 
         <button class="btn">Order Here!</button>
         </a>
         <a class="pinLink" href="https://www.pinterest.com/CerpaMedia/_created/" target="_blank" > 
