--- a/index.html
+++ b/index.html
@@ -16,20 +16,20 @@
 <h1 class="title">@_artkrasnova_</h1>
 
     <div class="btnContainer">
-        <a class="etsyLink" href="https://www.etsy.com/shop/Cerpamedia" target="_blank" > 
+        <a class="etsyLink" href="https://www.etsy.com/shop/KrasnovArt?ref=profile_header" target="_blank" > 
         <button class="btn">Order Here!</button>
         </a>
-        <a class="pinLink" href="https://www.pinterest.com/CerpaMedia/_created/" target="_blank" > 
+        <a class="pinLink" href="https://www.pinterest.com/KrasnovArt_/_created/" target="_blank" > 
             <button class="btn">Pinterest</button>
         </a>
-        <!-- <a class="webLink" href="#"> 
+        <a class="webLink" href="https://krasnovart.com/"> 
         <button class="btn">My Website</button>
-        </a> -->
-        <a class="tiktokLink" href="https://www.tiktok.com/@_anastasiakrasnova_?lang=en" target="_blank" > 
+        </a>
+        <a class="tiktokLink" href="https://www.tiktok.com/@krasnovart?lang=en" target="_blank" > 
         <button class="btn">TikTok</button>
         </a>
-        <a class="ytLink" href="https://www.youtube.com/channel/UCzFZnYZf1r1uNwH2U7zQlsQ?guided_help_flow=5" target="_blank" > 
-        <button class="btn">Youtube</button>
+        <a class="fbLink" href="https://www.facebook.com/krasnovartt" target="_blank" > 
+        <button class="btn">Facebook</button>
         </a>
     </div>
     
