updated links info

--- a/index.html
+++ b/index.html
@@ -13,35 +13,27 @@
 
 <img class="profilePic" src="images/Profilepic.jpeg" alt="profile">
 
-<h1 class="title">@_artkrasnova_</h1>
+<h1 class="title">@_KrasnovArt_</h1>
 
     <div class="btnContainer">
-<<<<<<< HEAD
-        <a class="etsyLink" href="https://www.etsy.com/shop/KrasnovArt?ref=profile_header" target="_blank" > 
-        <button class="btn">Order Here!</button>
+        <a class="webLink" href="https://krasnovart.com/" target="_blank"> 
+                <button class="btn">My Website</button>
         </a>
-        <a class="pinLink" href="https://www.pinterest.com/KrasnovArt_/_created/" target="_blank" > 
-=======
+
         <a class="etsyLink" href="https://www.etsy.com/shop/AnastasiaKrasnovaArt?ref=profile_header" target="_blank" > 
-        <button class="btn">Order Here!</button>
+                <button class="btn">Etsy</button>
         </a>
+
         <a class="pinLink" href="https://www.pinterest.com/AnastasiaKrasnovaArt/_created/" target="_blank" > 
->>>>>>> da87500019400d0d2e0551e58d247a39fa3ea3f3
-            <button class="btn">Pinterest</button>
+                <button class="btn">Pinterest</button>
         </a>
-        <a class="webLink" href="https://krasnovart.com/"> 
-        <button class="btn">My Website</button>
-<<<<<<< HEAD
-        </a>
+
         <a class="tiktokLink" href="https://www.tiktok.com/@krasnovart?lang=en" target="_blank" > 
-=======
-        </a> -->
-        <a class="tiktokLink" href="https://www.tiktok.com/@anastasiakrasnovart?lang=en" target="_blank" > 
->>>>>>> da87500019400d0d2e0551e58d247a39fa3ea3f3
-        <button class="btn">TikTok</button>
+                <button class="btn">TikTok</button>
         </a>
+
         <a class="fbLink" href="https://www.facebook.com/krasnovartt" target="_blank" > 
-        <button class="btn">Facebook</button>
+                <button class="btn">Facebook</button>
         </a>
     </div>
     
